# zsh-module-macros

./: Cargo.toml  README.md
src/: builtin.rs  derive.rs  lib.rs  state.rs
src/utils/: args.rs  emit.rs  mod.rs
