[package]
name = "zsh-module-macros"
version = "0.1.0"
authors = ["Cole McAnelly <cole.mcanelly3@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "TODO"
edition = "2024"
description = """
TODO
"""

[lib]
proc-macro = true


[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full"] }
